results/SpecGenBench/4-shot/log-MatrixAdd-2023_11_27_23_02_35.txt
public class MatrixAdd {
    //@ requires a.length == 2 && a[0].length == 2 && b.length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2 && (\forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j]);
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ maintaining (\forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; c[i][j] == a[i][j] + b[i][j]);
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < 2; c[k][j] == a[k][j] + b[k][j]));
        //@ maintaining (\forall int j; 0 <= j && j < 2; c[i][j] == a[i][j] + b[i][j]);
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:6: error: variable i is already defined in method add(int[][],int[][])
        //@ maintaining (\forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; c[i][j] == a[i][j] + b[i][j]);
                                     ^
1 error

